# birdclef-24

./: .gitignore  README.md  calculate_durations.py  data.ipynb  notes.ipynb  pyproject.toml
baseline/: baseline-effnet.ipynb  baseline.py  config.py  inference.ipynb  preprocess_data.py  submission.csv
baseline/lightning_logs/version_1/: metrics.csv
baseline/lightning_logs/version_2/: metrics.csv
baseline/lightning_logs/version_3/: metrics.csv
baseline/lightning_logs/version_4/: metrics.csv
baseline/lightning_logs/version_5/: metrics.csv
baseline/lightning_logs/version_6/: metrics.csv
baseline/lightning_logs/version_7/: metrics.csv
baseline/lightning_logs/version_8/: metrics.csv
baseline/lightning_logs/version_9/: metrics.csv
baselinev2/: baselinev2.ipynb  baselinev2.py  config.py  inference.ipynb  linreg_ensemble.ipynb  metric.py  notebookf608878570.ipynb
baselinev2/lightning_logs/version_6/: metrics.csv
lightning_logs/version_1/: metrics.csv
lightning_logs/version_5/: metrics.csv
lightning_logs/version_7/: metrics.csv
