[tool.poetry]
name = "birdclef24"
version = "0.1.0"
description = ""
authors = ["Yevhenii Azarov <yaz@respeecher.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.0"
pandas = "^2.2.2"
torchvision = "^0.18.0"
kaggle = "^1.6.12"
lightning = "^2.2.4"
matplotlib = "^3.8.4"
librosa = "^0.10.2"
torchaudio = "^2.3.0"
noisereduce = "^3.0.2"
timm = "^0.9.16"
opencv-python = "^4.9.0.80"
scikit-learn = "^1.4.2"
onnxruntime = "^1.17.3"
onnx = "^1.16.0"
seaborn = "^0.13.2"
albumentations = "^1.4.8"
wandb = "^0.17.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
